2010-01-08 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c:
	Use the dhgroup and pfsgroup default value when not set in advanced
	dialog(bnc#568534).
2009-11-10 Bin Li <bili@novell.com>
	Move from novell forge svn to google svn.
2009-06-26 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c:
	Fix nm-novellvpn-service segfaults when auth-type is null(bnc#501835).
2009-03-25 Bin Li <bili@novell.com>
	* properties/nm-novellvpn.c:
	* properties/nm-novellvpn-dialog.glade:
	Add advanced dialog for optional parameters.
2009-03-12 Bin Li <bili@novell.com>
	* properties/import-export.c:
	* properties/import-export.h:
	* properties/Makefile.am:
	* properties/nm-novellvpn.c:
	Support the import and export features for nvpn and vpnlogin.
2009-01-22 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.h:
	* src/nm-novellvpn-service.c:
	* properties/nm-novellvpn.c:
	* properties/nm-novellvpn-dialog.glade:
	Support the "Disable split tunnel" features.
2009-01-09 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service-novellvpn-helper.c:
	Dismiss compile warning and delete unused functions.
	* src/Makefile.am:
	* src/nm-utils.c:
	* src/nm-utils.h:
	Delete the nm-utils related file, use NM's library.
2009-01-08 Bin Li <bili@novell.com>
	* auth-dialog/gnome-two-password-dialog.c:
	* auth-dialog/gnome-two-password-dialog.h:
	* auth-dialog/main.c:
	* properties/nm-novellvpn.c:
	* src/nm-novellvpn-service.c:
	Dismiss unused variable.
	* auth-dialog/profile.h:
	Change prototype declare.
2008-11-10 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service.c:
	* auth-dialog/main.c:
	Support the password for x509 certificate method.
2008-11-07 Bin Li <bili@novell.com>
	* src/nm-novellvpn-service-novellvpn-helper.c:
	Support the tunnel device.
2008-10-30 Bin Li <bili@novell.com>
	Patch from Tambet Ingo <tambet@novell.com>
	* src/nm-novellvpn-service-novellvpn-helper.c:
	* src/nm-novellvpn-service.c:
	* properties/nm-novellvpn.c:
	Update for setting accessor changes, don't use private