@@ -1,3 +1,6 @@
+2010-03-21 Bin Li <bili@novell.com>
+	* properties/nm-novellvpn.c:
+	Save the password for system connection(bnc#582539).
 2010-01-08 Bin Li <bili@novell.com>
 	* src/nm-novellvpn-service.c:
 	Use the dhgroup and pfsgroup default value when not set in advanced
